2005-12-25 Anatoly Sokolov <aesok@post.ru>

	* libm/fplib/Files.am: include new files.
	* libm/fplib/fp_m_inf.S: new file.
	* libm/fplib/fp_p_inf.S: new file.
	* libm/fplib/fplib.inc (EMAX, EMIN): Add.
	* libm/fplib/ldexp.S: Check underflow and overflow cases.
	[Fixed bug #15226]

2005-12-23 Anatoly Sokolov <aesok@post.ru>

	* libm/fplib/fp_cmp.S: Use 'rByte' instead 'retByte'.
	* libm/fplib/fplib.inc (retByte): Deleted.

2005-12-18 Anatoly Sokolov <aesok@post.ru>

	Submitted by Werner Boellmann:
	* include/avr/pgmspace.h (strstr_P): Declare.
	* libc/pmstring/Files.am: Include new file.
	* libc/pmstring/strstr_P.S: New file.
	Add patch #4668: progmem aware verson of strstr().

2005-12-17 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* xml/patch-headers.py: add the ATtinyX4 family, fix the
	list of ATtinyX5.
	* doc/api/vectortable.dox: Regenerate using patch-headers.py.

2005-12-15 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: add tests for the ATtiny24/44/84 support.
	* devtools/gen-avr-lib-tree.sh: add support for ATtiny24/44/84.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* include/avr/iotn24.h: new file.
	* include/avr/iotn44.h: new file.
	* include/avr/iotn84.h: new file.
	* include/avr/iotnx4.h: new file.
	* include/avr/Makefile.am: include new files.
	* doc/api/main_page.dox: Document support for ATtiny24/44/84.
	* doc/api/using-tools.dox: (Ditto.)

2005-12-14 Anatoly Sokolov <aesok@post.ru>

	* /include/avr/iocanxx.h (IVSE): Rename in IVSEL.
	[Fixed bug #15161]

2005-12-13 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Frank Behrens:
	* include/util/delay.h: fix inlining of the delay functions.
	Fix from bug #15161: util/delay.h misses inline keyword (regression).

2005-12-11 Anatoly Sokolov <aesok@post.ru>

	* /libm/fplib/fp_powerseries.S: Use __addsf3/__mulsf3/__divsf3 
	instead __addsf3x/__mulsf3x/__divsf3x.
	* /libm/fplib/asin.S (table_asin): Change constants to ieee format.
	* /libm/fplib/atan.S (.Ltable_atan): (Ditto.).